# tonto_compiler

./: CMakeLists.txt  README.md  globals.cpp  globals.h  lexer.l  parser.y  teste.tonto  tokens.h
